mediawiki.notification.css: Avoid horizontal scrollbar on fade in and fade out
This is a follow-up to I01473a199665b9fd86ed50b7d117532ac94f3edf.

--- a/resources/src/mediawiki/mediawiki.notification.css
+++ b/resources/src/mediawiki/mediawiki.notification.css
@@ -5,6 +5,8 @@
 	width: 20em;
 	line-height: 1.35;
 	z-index: 10000;
+	/* Avoid horizontal scrollbar on fade in and on fade out */
+	overflow: hidden;
 }
 
 .mw-notification {
